--- a/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
+++ b/src/app/design/editor/ui-editor/screen-editor/screen-editor.component.html
@@ -1211,7 +1211,7 @@
           @if (editActionData.nextType) {
             <div class="form-group mb-3">
               <label class="form-label">Select App *</label>
-              <select class="form-select" name="appId" (change)="loadOtherAppList(editActionData.appId)"
+              <select class="form-select" name="appId" (change)="loadOtherAppList('',editActionData.appId)"
                 [(ngModel)]="editActionData.appId">
                 @for (app of otherAppList; track app.id) {
                   <option [ngValue]="app.id">{{app.title}}</option>
