--- a/src/app/run/lookup/lookup.component.html
+++ b/src/app/run/lookup/lookup.component.html
@@ -1,9 +1,9 @@
 <div class="viewport ">
   @if (!hideTitle()) {
     <page-title>
-      <h4>{{lookup?.name}}</h4>
+      <h4 class="m-0">{{lookup?.name}}</h4>
       @if (lookup?.description) {
-        <div>{{lookup?.description}}</div>
+        <div class="mt-1">{{lookup?.description}}</div>
       }
     </page-title>
   }
