--- a/src/app/run/profile/profile.component.html
+++ b/src/app/run/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="viewport ">
   <page-title>
-    <h4>Profile</h4>
+    <h4 class="m-0">Profile</h4>
   </page-title>
   @if (user){
     <div class="limit-width m-a pb-3 ps-2 pe-2" style="max-width:720px">
