--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 //@import "@fullcalendar/timegrid/main.css";
 @use "leaflet/dist/leaflet.css";
 
-@import '@fontsource/inter';
+@use '@fontsource/inter';
 
 /* You can add global styles to this file, and also import other style files */
 $enable-negative-margins:true !default;
