--- a/src/app/run/tiles/tiles.component.html
+++ b/src/app/run/tiles/tiles.component.html
@@ -1,7 +1,7 @@
 <page-title>
-  <h4>{{app?.title}}</h4>
+  <h4 class="m-0">{{app?.title}}</h4>
   @if (app?.description) {
-    <div>{{app?.description}}</div>
+    <div class="mt-1">{{app?.description}}</div>
   }
 </page-title>
 <div class="single-content">
