--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@ body {
   overscroll-behavior-y: contain;
 }
 
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+  font-weight: 600;
+}
+
 html {
   height: 100%;
   // height: 100vh;
